<resources>
    <string name="app_name">CityGuide</string>
    <string name="app_logo_name">Guide for today</string>
    <string name="skip">Skip</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="welcome">Welcome dear Customer</string>
    <string name="fav_list">Favourites List</string>
    <string name="fav_spot">Choose your Spot</string>
    <string name="start">Lets Get Started</string>
    <string name="Search_text">Search...</string>
    <string name="restaurant">Restaurants</string>
    <string name="mosque">Mosques</string>
    <string name="gaming">Gaming</string>
    <string name="monuments">Monuments</string>
    <string name="featured">All featured Locations</string>
    <string name="feature_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="view_all">View All</string>
    <string name="categories">Categories</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_categories">All Categories</string>
    <string name="nav_missing">Add Missing Place</string>
    <string name="nav_Profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="welcomework">How we work?</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate">Rate Us</string>
    <string name="nav_slogan_header">Explore Your City</string>
    <string name="expand_all">Expand All</string>
    <string name="cinema">Cinemas</string>
    <string name="gym">Gyms</string>
    <string name="welcomescreen">Grow your business by adding them to our application.</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="name">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="phone">Enter Phone Number</string>
    <string name="remember">Remember Me</string>
    <string name="forgot">Forgot Password</string>
    <string name="forgot_desc">Enter the phone number of which you want to change the password</string>
    <string name="create">Create Account</string>
    <string name="google">Login with Google</string>
    <string name="facebook">Login with Facebook</string>
    <string name="next">Next</string>
    <string name="OTP">OTP Verification</string>
    <string name="OTPVerify">Enter one time password sent on your number</string>
    <string name="selection">Make Selection</string>
    <string name="selection_desc">Select the option through which you want to receive the OTP</string>
    <string name="update">Update Password</string>
    <string name="update_desc">Your Identity is verified update your Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="updated">Password Updated</string>
    <string name="updated_desc">Your Password has been Updated</string>
    <string name="add_place">Add information about the place</string>
    <string name="add_category">Add Category</string>
    <string name="add_location">Add Location</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="marker">Move marker to correct location</string>
    <string name="google_maps_key">map_key</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>