<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backbtn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/lock"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/colorBlack"
            android:textSize="50sp"
            android:fontFamily="@font/muli_bold"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_desc"
            android:textSize="17sp"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorBlack"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack"
            app:hintTextColor="@color/colorBlack"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/logintext_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/forgot_nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:onClick="GetOTP"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"/>

            <ProgressBar
                android:id="@+id/forgot_progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>