<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlace">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/cancelToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="GotoMain"
            android:src="@drawable/cancel" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/add_place" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_bold"
            android:text="@string/add_place"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/colorBlack"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack"
            app:hintTextColor="@color/colorBlack"
            app:startIconDrawable="@drawable/house"
            app:startIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editplacename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="text"
                android:textSize="20sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Place Description"
            app:boxStrokeColor="@color/colorBlack"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorBlack"
            app:hintTextColor="@color/colorBlack"
            app:startIconDrawable="@drawable/description"
            app:startIconTint="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editplacedesc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/muli"
                android:inputType="text"
                android:textSize="20sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli"
            android:text="@string/add_category"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorBlack"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="dropdown_menu"
            app:hintTextColor="@color/colorBlack"
            app:startIconDrawable="@drawable/list"
            app:startIconTint="@color/colorBlack">

            <AutoCompleteTextView
                android:id="@+id/add_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="none"
                android:textColor="@color/colorBlack" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli"
            android:text="@string/add_location"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />
        <Button
            android:id="@+id/map_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Location"
            android:onClick="GoToMap"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/AddPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_pictures"
            android:layout_marginTop="30dp"
            android:onClick="AddPicture"
            android:background="@color/colorPrimary"/>
        <ImageView
            android:id="@+id/imagegallery"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/AddPlaceDatabase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_marginTop="30dp"
                android:onClick="GoPlaceData"
                android:background="@color/colorPrimary"/>

            <ProgressBar
                android:id="@+id/progressBaradd"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</ScrollView>